--- a/lib/facilities/help/helpItem.jade
+++ b/lib/facilities/help/helpItem.jade
@@ -23,7 +23,7 @@ html
 
   body
     nav.menu
-        a(href="../help") Index
+        a(href="../"+name) Index
     h1= meta.title
     div
         h2 Function path:
