--- a/lib/facilities/help/helpItem.jade
+++ b/lib/facilities/help/helpItem.jade
@@ -1,27 +1,6 @@
-doctype html
-html
-  head
-    title.
-        #{path} (#{meta.title})
-    style.
-        nav.menu {
-            top: 0px;
-            float: right;
-        }
-        nav.menu a {
-            padding: .5em;
-            background: #eeeeff;
-            border: #0066aa solid 1px;
-            border-right: #004466 solid 3px;
-            border-bottom: #004466 solid 3px;
-        }
-        nav.menu a:hover {
-            border: #0066aa solid 3px;
-            border-right: #004466 solid 1px;
-            border-bottom: #004466 solid 1px;
-        }
-
-  body
+extends ../layout.jade
+- var title = path+" ("+meta.title+")";
+block contents
     nav.menu
         a(href="../"+name) Index
     h1= meta.title
