--- a/lib/facilities/layout.jade
+++ b/lib/facilities/layout.jade
@@ -1,9 +1,9 @@
 doctype html
 html
   head
-    title.
-        #{path} (#{title})
+    title= title
     style.
+        /* NAV MENÚ *//*{{{*/
         nav.menu {
             top: 0px;
             float: right;
@@ -20,6 +20,61 @@ html
             border-right: #004466 solid 1px;
             border-bottom: #004466 solid 1px;
         }
+        /*}}}*/
+        /* TABS *//*{{{*/
+        .tabs {
+            display:none;
+        }
+        .tabs>ul {
+            margin-left: 0px;
+            padding-left: 0px;
+            margin-bottom: 3px;
+        }
+        .tabs>ul li {
+            display: inline;
+            padding-left: .5em;
+            padding-right: .5em;
+            margin-right: 10px;
+            list-style-type: none;
+            border-left: #000055 solid 4px;
+            border-right-width: 3px;
+            border-bottom: #000055 solid 1px;
+        }
+        .tabs>ul li:hover {
+            border-left: #000055 solid 1px;
+            margin-right: 12px;
+        }
+        .tabs>ul li.selected {
+            background: #ccddee;
+            border-bottom: #000055 solid 3px;
+        }
+        .tabs>div {
+            border: #999999 solid 1px;
+            padding: 1em;
+            margin-top: 0px;
+        }
+        /*}}}*/
     script(src=prefs.jQuery)
   body
     block contents
+    script.
+        $(".tabs").each(function() {
+            var tabs = $("ul", this).first().find("li");
+            var panes = $("div", this).first().children("div");
+
+            panes.hide();
+
+            tabs.each(function(){
+                var t = $(this);
+                var k = t.data("id");
+                var p = panes.filter(function(i, p){return $(p).data("id") == k;});
+                t.click(function() {
+                    tabs.removeClass("selected");
+                    t.addClass("selected");
+                    panes.hide();
+                    p.show();
+                });
+            }).first().click();
+
+            $(this).show();
+        });
