Fixed example with parameters links when having format extension.

--- a/lib/facilities/help/helpItem.jade
+++ b/lib/facilities/help/helpItem.jade
@@ -46,8 +46,8 @@ block contents
                         li
                             b.
                                 (#{e.method})&nbsp;
-                            a(href=e.url, title=e.comments)= e.label
+                            a(href=e.url(), title=e.comments)= e.label
                             each fitems, ext in filters
                                 - var m = "["+ext+"]";
                                 span &nbsp;
-                                a(href=e.url+"."+ext, title=ext)= m
+                                a(href=e.url(ext), title=ext)= m
