Field disabling switch and better error rendering in /form facility.

--- a/lib/facilities/layout.jade
+++ b/lib/facilities/layout.jade
@@ -16,6 +16,11 @@ html
             .loading {
                 cursor: wait;
             }
+            code {
+                display: block;
+                background: #dddddd;
+                padding: 1em;
+            }
             /* NAV MENÚ: {{{ */
             nav.menu {
                 top: 0px;
