--- a/lib/facilities/layout.jade
+++ b/lib/facilities/layout.jade
@@ -10,7 +10,7 @@ html
             input, textarea{
                 cursor: text;
             }
-            select, a {
+            input[type=checkbox], select, a {
                 cursor: pointer;
             }
             .loading {
