"version": "1.2.1" - Included and inlined jQuery source in facilities layout to avoid many browsers security restrictions:
    http://stackoverflow.com/questions/24837069/chrome-wont-load-jquery-or-soundcloud-api/24837951#24837951

--- a/lib/facilities/layout.jade
+++ b/lib/facilities/layout.jade
@@ -73,7 +73,8 @@ html
                 margin-top: 0px;
             }
             /* }}} */
-        script(src=prefs.jQuery)
+        script
+            include ./_libs/jquery.min.js
   body
     block contents
     script.
