--- a/lib/facilities/form/formItem.jade
+++ b/lib/facilities/form/formItem.jade
@@ -5,20 +5,17 @@ append head
         include ./formItem.css
 
 block contents
+    nav.menu
+        a(href="../"+name) Index
     div.header
         h1.
             #{meta.title} Form (#{path[0]})
     div.formWindow
         div.formContainer
-          nav.menu
-              a(href="../"+name) Index
           div.tabs
-              ul
-                  each f, name in methods
-                      li(data-id=name)= name.toUpperCase()
               div
-                  each f, name in methods
-                      div.form(data-id=name, data-path=path[0] data-method=name)
+                  each f, mtd in methods
+                      div.form(data-id=mtd, data-path=path[0] data-method=mtd)
                           div.fields !{f.tpl} 
                           div.formButtons
                               button.reset Reset
@@ -31,7 +28,12 @@ block contents
                                           option(value=ext)=ext
 
                           div.controls
-                            ul
+                            ul.tabbar
+                                each ff, fname in methods
+                                    li(data-id=fname)= fname.toUpperCase()
+                            ul.buttons
+                                li Test
+                                li lalala
                                 if f.error
                                     li.error= f.error
                                 if f.isDefault
